# aide

./: .gitignore  Cargo.toml  requirements.txt  task-now.md  task-optimized.md
.aide/: config.md  config.toml
aide/: __init__.py  __main__.py  main.py
aide/core/: __init__.py  config.py  output.py
aide/decide/: __init__.py  cli.py  daemon.py  errors.py  handlers.py  server.py  storage.py  types.py
aide/decide/web/: style.css
aide/env/: __init__.py  manager.py  registry.py
aide/env/modules/: __init__.py  android.py  base.py  flutter.py  node.py  node_deps.py  python.py  requirements.py  rust.py  uv.py  venv.py
aide/flow/: __init__.py  branch.py  errors.py  git.py  hooks.py  storage.py  tracker.py  types.py  utils.py  validator.py
docs/: README.md  commands.md  data-formats.md  install.md
docs/commands/: decide.md  env.md  flow.md  init.md
docs/commands/decide/: storage.md
docs/commands/flow/: README.md  git.md  validation.md  verification.md
docs/formats/: config.md
old-data-reference/docs/formats/: data.md
openspec/: project.md
openspec/changes/add-global-config/: design.md  proposal.md  tasks.md
openspec/changes/rewrite-in-rust/: design.md  (+1 more)
reference/: aide-program.md
src/: main.rs  utils.rs
src/cli/: config.rs  decide.rs  flow.rs  init.rs  mod.rs
src/core/: config.rs  mod.rs  output.rs  plantuml.rs  project.rs
src/decide/: handlers.rs  mod.rs  server.rs  storage.rs  types.rs
src/flow/: branch.rs  git.rs  hooks.rs  mod.rs  storage.rs  tracker.rs  types.rs  validator.rs
tests/: cli_integration.rs
web/: app.js  index.html
(+32 files in other folders)
